Mon Jul 12 01:58:56 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/csv.rb: Fix unused variable warnings.
	  Patch by Run Paint [ruby-core:30991]
	
	* lib/date.rb: ditto
	
	* lib/debug.rb: ditto
	
	* lib/drb/drb.rb: ditto
	
	* lib/drb/invokemethod.rb: ditto
	
	* lib/irb/ruby-lex.rb: ditto
	
	* lib/irb/slex.rb: ditto
	
	* lib/logger.rb: ditto
	
	* lib/pathname.rb: ditto

Sun Jul 11 21:20:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT{,.ja} (rb_block_call): fixed about third/fourth
	  arguments to the block.  based on [ruby-core:31192] by Asher
	  Haig.  [Bug #3558]

Sun Jul 11 17:01:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in ({,dist-,real-}clean-ext): should also omit
	  semicolon when omitting "in WORDS" of FOR-statement.

	* tool/rmdirs: ditto.

Sun Jul 11 11:07:42 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rdoc/test_rdoc_ri_driver.rb (test_formatter): add a test.  a
	  patch from caleb clausen in [ruby-core:31182].

Sat Jul 10 21:43:11 2010  Tanaka Akira  <akr@fsij.org>

	* strftime.c (rb_strftime_with_timespec): fix precision handling for
	  %:z and %::z.

Fri Jul  9 22:32:54 2010  Tanaka Akira  <akr@fsij.org>

	* strftime.c: unused declarations removed.

Fri Jul  9 21:20:22 2010  Tanaka Akira  <akr@fsij.org>

	* strftime.c (rb_strftime_with_timespec): clear colons at unknown
	  directive.

Fri Jul  9 21:04:10 2010  Tanaka Akira  <akr@fsij.org>

	* strftime.c: don't call tzset.  strftime.c doesn't depend on
	  the global timezone.

Fri Jul  9 20:30:26 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): 24:00 should be the beginning of the next
	  day even if the leap second, 23:59:60, exists.

Fri Jul  9 01:08:46 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/emitter.rb (initialize): line_width is
	  a valid option passed to the emitter.
	
	* test/psych/test_psych.rb: corresponding tests.

Fri Jul  9 00:49:46 2010  Aaron Patterson <aaron@tenderlovemaking.com>
