@@ -1,3 +1,7 @@
+Tue Jul 13 12:04:57 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* missing/close.c: keep original errno.
+
 Mon Jul 12 01:58:56 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/csv.rb: Fix unused variable warnings.
